Version 0.7.0-SNAPSHOT
    * [fix] compatibility with Idea 14, Webstorm 9 products
    * [fix] #97 UnsupportedOperationException viewing collection
    * [fix] javascript file detection for executing script in Idea 13.1 UI
    * [fix] #81 Use User Database as authentication database
    * [add] Document edition: DateTimePicker
    * [add] Redesign query panel
    * [add] #99 Date are displayed and edited in UTC
    * [add] #90 SSL Support for mongo connection (not tested)
    * [add] #82 reload resulset after document deletion or modification
    * [add] Drop database and collection actions (caution!)
    * [upd] Better support of Darcula/Intellij themes
    * [upd] Document edition: Enlarge Add Key/Value Dialog default width
    * [upd] adapt authentication code after migration of mongo-java-driver to version 2.12.2

Version 0.6.1
    * [fix] javascript file detection for executing script

Version 0.6.0
    * [update] Results are displayed in a standard editor tab (like any file)
    * [fix] #77 Long are incorrectly displayed when editing a document
    * [fix] #78 Cannot edit documents that have custom _id
    * [fix] #69 Cannot edit number value
    * [fix] #54 #58 Test Connection Button does not properly work
    * [add] #68 Ability to run a file
    * [add] #61 Replica Set support

Version 0.5.2
    * [fix] API error when opening the Add Dialog

Version 0.5.1
    * [fix] #57 Fatal Error with new releases of Jebrains products(Webstorm 7, Idea 13, etc.) due to some API changes

Version 0.5.0
    * [fix] #57 Fatal Error with new releases of Jebrains products(Webstorm 7, Idea 13, etc.) due to some API changes
    * [fix] #48 Key column is not resizable
    * [add] Document can be edited (right click on the object id of the document)
    * [add] Collections can be cleared (right click on the collection in the mongo explorer)

Version 0.4.3
    * [add] Enable aggregation query button