@@ -20,13 +20,17 @@ import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.Result;
+import com.intellij.openapi.command.WriteCommandAction;
 import com.intellij.openapi.editor.CaretModel;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.PopupChooserBuilder;
 import com.intellij.ui.components.JBList;
 import com.mongodb.QueryOperators;
 import org.codinjutsu.tools.mongo.model.MongoAggregateOperator;
+import org.jetbrains.annotations.NotNull;
 
 import java.awt.event.KeyEvent;
 import java.lang.reflect.Field;
@@ -35,6 +39,7 @@ import java.util.List;
 
 public class OperatorCompletionAction extends AnAction implements Disposable {
 
+    private static final String MONGO_OPERATOR_COMPLETION = "MONGO_OPERATOR_COMPLETION";
 
     private static final JBList QUERY_OPERATOR_LIST;
 
@@ -58,9 +63,11 @@ public class OperatorCompletionAction extends AnAction implements Disposable {
         QUERY_OPERATOR_LIST = new JBList(operator);
     }
 
+    private final Project project;
     private final Editor editor;
 
-    public OperatorCompletionAction(Editor editor) {
+    public OperatorCompletionAction(Project project, Editor editor) {
+        this.project = project;
         this.editor = editor;
         registerCustomShortcutSet(KeyEvent.VK_SPACE, KeyEvent.CTRL_MASK, editor.getContentComponent());
     }
@@ -78,13 +85,12 @@ public class OperatorCompletionAction extends AnAction implements Disposable {
                         final String selectedQueryOperator = (String) QUERY_OPERATOR_LIST.getSelectedValue();
                         if (selectedQueryOperator == null) return;
 
-                        ApplicationManager.getApplication().runWriteAction(new Runnable() {
-                            public void run() {
+                        new WriteCommandAction(project, MONGO_OPERATOR_COMPLETION) {
+                            @Override
+                            protected void run(@NotNull Result result) throws Throwable {
                                 document.insertString(offset, selectedQueryOperator);
                             }
-                        });
-
-
+                        }.execute();
                     }
                 })
                 .createPopup()
